--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </form>
 
     <small>
-        Left click to toggle completed. <br> Right click to delete todo.
+        Left click to toggle completed. <br> Right click to delete todo. <br> For mobile/tables Press and hold to
+        delete.
     </small>
 
 
